added a magic command

--- a/src/main.tex
+++ b/src/main.tex
@@ -1,3 +1,5 @@
+\RequirePackage{plautopatch}  % From https://qiita.com/wtsnjp/items/76557b1598445a1fc9da
+
 \documentclass[uplatex,twocolumn,9pt,dvipdfmx]{jsarticle}
 
 \usepackage[dvipdfmx]{hyperref}
