updated prof yokota's slide

--- a/src/main.tex
+++ b/src/main.tex
@@ -120,7 +120,8 @@
     \item \href{https://www.amazon.co.jp/dp/1421407949}{Golubら、Matrix Computations}：これは実際に計算することを念頭においた、線形代数の教科書です。こちらも、辞書として使えます。
     \item \href{http://www2.imm.dtu.dk/pubdb/pubs/3274-full.html}{Petersonら、The Matrix Cookbook}：これは線形代数の公式のクックブックです。無料のpdfとして公開されており、簡単に調べたいときはこれが参考になります。
     \item \href{https://www.deeplearningbook.org/contents/notation.html}{GoodfellowらのDeep Learningのnotationページ}：Deep Learningに関する教科書のnotationの部分が無料で公開されています。画像処理分野の表記方法として参考になります。
-    \item \href{https://www.slideshare.net/yokotatsuya/2014-3-13}{名工大横田先生による「テンソル分解の基礎と画像・信号処理への応用」}：行列を一般化した「テンソル」に関する、日本語での包括的な資料です。
+    \item \href{https://speakerdeck.com/yokotatsuya/tensorufen-jie-falseji-chu-toying-yong-miru2022tiyutoriaru}{名工大横田先生による「テンソル分解の基礎と応用（MIRU2022 チュートリアル）」}：行列を一般化した「テンソル」に関する、
+    日本語での包括的な資料です。p78以降に、テンソル表記に関する詳細なまとめがあります。
 \end{itemize}
 
 また、TeXに関しては、ネット上の資料が古かったり、現代的なベストプラクティスがわからないことが多々あります。次の資料が参考になります。
@@ -312,7 +313,7 @@ $\mathbf{I} \in \mathbb{R}^{H \times W \times 3}$のように書けます\footno
 あるいは、$H$と$W$を入れ替えてもいいです。}。
 また、近年のディープラーニングに関する議論では、処理中に出てくる重み情報を、
 上記のように階数が大きいテンソルとして表現することが多いです。
-テンソルに関しては名工大横田先生の資料\footnote{\url{https://www.slideshare.net/yokotatsuya/2014-3-13}}をご参照ください。
+テンソルに関しては名工大横田先生の資料\footnote{\url{https://speakerdeck.com/yokotatsuya/tensorufen-jie-falseji-chu-toying-yong-miru2022tiyutoriaru}}をご参照ください。
 
 さて、これらは、基本的に\textbf{大文字で太字}にすることをオススメします。
 行列は太字にしないほうが一般的かもしれません。
