updated the pub data. add transformer article

--- a/src/main.tex
+++ b/src/main.tex
@@ -52,12 +52,12 @@
 
 \title{工学系の卒論生のための数式記述入門}
 \author{東京大学　情報理工学系研究科　講師　松井勇佑}
-%\date{}
+\date{初版 2021年1月7日 / 最終更新 2023年4月26日}
 \maketitle
 
 \begin{screen}
     \begin{itemize}
-    \item 本資料のGitHubリポジトリ： \url{https://github.com/matsui528/math_writing}
+    \item 本資料のGitHubリポジトリ： \url{https://github.com/mti-lab/math_writing}
     \item 著者のウェブページ：\url{http://yusukematsui.me}
     \end{itemize}
 \end{screen}
@@ -93,8 +93,8 @@
 これからの学生にはそのような間違いを犯してほしくないので、この文章を書くことにしました}。
 \textbf{分野が違うと慣習も大きく違う}ので注意してください。
 本資料の内容と普段読んでいる論文の記述に矛盾があった場合は、常に自分の分野の慣習を優先してください。
-また、コメントなど歓迎です。\href{https://github.com/matsui528/math_writing/issues}{issue}へ書き込むか、
-\href{https://github.com/matsui528/math_writing/pulls}{pull request}をお願いします。
+また、コメントなど歓迎です。\href{https://github.com/mti-lab/math_writing/issues}{issue}へ書き込むか、
+\href{https://github.com/mti-lab/math_writing/pulls}{pull request}をお願いします。
 
 
 
@@ -122,6 +122,7 @@
     \item \href{https://www.deeplearningbook.org/contents/notation.html}{GoodfellowらのDeep Learningのnotationページ}：Deep Learningに関する教科書のnotationの部分が無料で公開されています。画像処理分野の表記方法として参考になります。
     \item \href{https://speakerdeck.com/yokotatsuya/tensorufen-jie-falseji-chu-toying-yong-miru2022tiyutoriaru}{名工大横田先生による「テンソル分解の基礎と応用（MIRU2022 チュートリアル）」}：行列を一般化した「テンソル」に関する、
     日本語での包括的な資料です。p78以降に、テンソル表記に関する詳細なまとめがあります。
+    \item \href{https://arxiv.org/abs/2207.09238/}{Phuongら、Formal Algorithms for Transformers}：Transformerを題材に、複雑な構造をどのように数式として厳密に書くか示したものです。具体的であり、参考になります。特に、文字列といった「長さが文脈に依存する系列」についての記述についてはぜひこの資料を参考にしてください。
 \end{itemize}
 
 また、TeXに関しては、ネット上の資料が古かったり、現代的なベストプラクティスがわからないことが多々あります。次の資料が参考になります。
